--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
      "formation": {  
           "worker": {  
               "quantity": 1,  
-              "size": "eco"  
+              "size": "basic"  
           }  
       }  
 
