--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@adiwajshing/keyed-db": "^0.2.4",
         "chalk": "^5.0.1",
         "crypto-js": "^4.1.1",
+        "@cypress/request": "^3.0.1",
         "node-telegram-bot-api":"v0.50.0",
         "axios": "latest",
         "node-fetch": "^3.2.6",
